Fix Transfer modal X button alignment: match inner wrapper width to small modal

--- a/src/modules/page/lobbyManagement2/lobbyManagement2.css
+++ b/src/modules/page/lobbyManagement2/lobbyManagement2.css
@@ -1321,6 +1321,10 @@
     max-width: 520px;
 }
 
+.lm2-modal-container__inner--small {
+    max-width: 400px;
+}
+
 .lm2-modal__close {
     position: absolute;
     top: calc(-2rem - 10px);
